--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,6 @@
 $body-font-family: 'Questrial-Regular';
 $heading-font-family: 'Questrial-Regular';
 
+$adahlia-grey: #757575;
+$adahlia-red: #D93908;
+$adahlia-yellow: #FFE3A5;
