--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -16,7 +16,14 @@
   color: $adahlia-red !important;
 }
 
-
 .v-window__prev, .v-window__next {
   background-color: $adahlia-red;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.theme--dark.v-tabs > .v-tabs-bar .v-tab:not(.v-tab--active), .theme--dark.v-tabs > .v-tabs-bar .v-tab:not(.v-tab--active) > .v-icon, .theme--dark.v-tabs > .v-tabs-bar .v-tab:not(.v-tab--active) > .v-btn, .theme--dark.v-tabs > .v-tabs-bar .v-tab--disabled {
+  color: #ffe3a5;
 }
