feat: Add a bar at the bottom with the name of the image

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,4 +3,5 @@ $heading-font-family: 'Questrial-Regular';
 
 $adahlia-grey: #757575;
 $adahlia-red: #D93908;
+$adahlia-white: #fcfcfc;
 $adahlia-yellow: #FFE3A5;
